Add markup for header

--- a/index.html
+++ b/index.html
@@ -18,5 +18,25 @@
 </head>
 <body>
 
+	<!-- HEADER -->
+	<header class="theme-margin" id="main-header">
+		<div class="l-container l-clearfix">
+			<a href="index.html"><img src="img/logo.png" alt="Conversion"></a>
+
+			<div class="contact-info l-align-right">
+				<p><small>Call Us</small></p>
+				<p>1-800-0000</p>
+			</div>
+
+			<ul class="l-inline-list l-align-right l-clearfix">
+				<li class="social-media facebook"><a href=""></a></li>
+				<li class="social-media twitter"><a href=""></a></li>
+				<li class="social-media delicious"><a href=""></a></li>
+				<li class="social-media digg"><a href=""></a></li>
+				<li class="social-media stumbleupon"><a href=""></a></li>
+			</ul>
+		</div>
+	</header>
+
 </body>
 </html>
