Add markup for Product Intro Section

--- a/index.html
+++ b/index.html
@@ -38,5 +38,46 @@
 		</div>
 	</header>
 
+
+
+
+	<div class="l-container">
+		<!-- PRODUCT INTRO -->
+		<section>
+			<div class="l-clearfix">
+				<img src="img/productBox.jpg" alt="Product Box" class="l-floated-image l-align-left">
+
+				<div class="l-hero-unit l-align-left">
+					<h1>Product Name</h1>
+
+					<p class="lead-text">Here you can add a few lines to describe your product and showcase some of its most important features.</p>
+
+					<p class="lead-text">Below this paragraph you can have a list of feature with a small description added to each one.</p>
+
+					<ul class="l-list-two-col l-checklist l-clearfix">
+						<li>We're never closed, so 24/7 product support</li>
+						<li>Available for both Mac and PC</li>
+						<li>90-Day Money Back Guarantee</li>
+						<li>1 Year Free Updates for the Platinum Package</li>
+					</ul>
+				</div>
+
+				<div class="bordered-box price-box l-align-right">
+					<div class="bordered-box-content">
+						<h2>$99</h2>
+						<p>Get 1 Year of Free Support</p>
+					</div>
+
+					<footer class="price-box-footer">
+						<a href="#" class="button primary theme-button-primary">Buy Now!</a>
+					</footer>
+				</div>
+			</div>
+		</section>
+	</div>
+
+
+
+
 </body>
 </html>
