Add markup for Product Features Section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,69 @@
 				</div>
 			</div>
 		</section>
+
+
+		<hr class="theme-margin">
+
+
+		<!-- PRODUCT FEATURES -->
+		<section>
+			<ul class="l-list-two-col theme-margin l-clearfix">
+				<li>
+					<img src="img/bulletIcon1.png" alt="Bullet" class="l-align-left">
+
+					<div class="l-floated-content">
+						<h3>This is a bullet point</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores officia odit, at repellat dolore quam fugit, libero impedit voluptatibus eius perferendis architecto dolor quidem dolorum minima doloremque quas illo quod.</p>
+					</div>
+				</li>
+
+				<li>
+					<img src="img/bulletIcon2.png" alt="Bullet" class="l-align-left">
+
+					<div class="l-floated-content">
+						<h3>This is a bullet point</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores officia odit, at repellat dolore quam fugit, libero impedit voluptatibus eius perferendis architecto dolor quidem dolorum minima doloremque quas illo quod.</p>
+					</div>
+				</li>
+
+				<li>
+					<img src="img/bulletIcon3.png" alt="Bullet" class="l-align-left">
+
+					<div class="l-floated-content">
+						<h3>This is a bullet point</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores officia odit, at repellat dolore quam fugit, libero impedit voluptatibus eius perferendis architecto dolor quidem dolorum minima doloremque quas illo quod.</p>
+					</div>
+				</li>
+
+				<li>
+					<img src="img/bulletIcon4.png" alt="Bullet" class="l-align-left">
+
+					<div class="l-floated-content">
+						<h3>This is a bullet point</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores officia odit, at repellat dolore quam fugit, libero impedit voluptatibus eius perferendis architecto dolor quidem dolorum minima doloremque quas illo quod.</p>
+					</div>
+				</li>
+
+				<li>
+					<img src="img/bulletIcon5.png" alt="Bullet" class="l-align-left">
+
+					<div class="l-floated-content">
+						<h3>This is a bullet point</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores officia odit, at repellat dolore quam fugit, libero impedit voluptatibus eius perferendis architecto dolor quidem dolorum minima doloremque quas illo quod.</p>
+					</div>
+				</li>
+
+				<li>
+					<img src="img/bulletIcon6.png" alt="Bullet" class="l-align-left">
+
+					<div class="l-floated-content">
+						<h3>This is a bullet point</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores officia odit, at repellat dolore quam fugit, libero impedit voluptatibus eius perferendis architecto dolor quidem dolorum minima doloremque quas illo quod.</p>
+					</div>
+				</li>
+			</ul>
+		</section>
 	</div>
 
 
