Add markup for Product Testimonials Section

--- a/index.html
+++ b/index.html
@@ -137,6 +137,35 @@
 				</li>
 			</ul>
 		</section>
+
+
+
+
+		<!-- PRODUCT TESTIMONIALS -->
+		<section>
+			<div class="bordered-box theme-margin">
+				<header class="bordered-box-header">
+					<p>Our Customers About Us</p>
+				</header>
+
+				<div class="bordered-box-content">
+					<ul class="l-list-vertical">
+						<li>
+							<blockquote>
+								This is a great product. I got it a while ago and I couldn't be happier with my choice. It's definitely a good investment if you work in my field.
+								<cite>John Doe, CEO</cite>
+							</blockquote>
+						</li>
+						<li>
+							<blockquote>
+								Another great testimonial.
+								<cite>John Doe, CEO</cite>
+							</blockquote>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 	</div>
 
 
