--- a/index.html
+++ b/index.html
@@ -176,6 +176,45 @@
 				<a href="#" class="button primary theme-button-primary">Buy Now For Just $99 and Get 1 Yeaer of Free Support!</a>
 			</div>
 		</section>
+
+
+		<hr class="theme-margin">
+
+
+		<!-- FOOTER MENU -->
+		<section>
+			<ul class="l-list-three-col l-clearfix theme-margin">
+				<li>
+					<h4>Follow Us</h4>
+					<p>You can follow us on any of the social networks for product updates.</p>
+
+					<ul class="l-inline-list l-clearfix">
+						<li class="social-media facebook"><a href=""></a></li>
+						<li class="social-media twitter"><a href=""></a></li>
+						<li class="social-media delicious"><a href=""></a></li>
+						<li class="social-media digg"><a href=""></a></li>
+						<li class="social-media stumbleupon"><a href=""></a></li>
+					</ul>
+				</li>
+
+				<li>
+					<h4>Subscribe</h4>
+					<p>Enter your email below to subscribe to our weekly newsletter and receive free product updates.</p>
+
+					<form action="#" method="POST" class="custom-form theme-form">
+						<input type="email" id="subscribe-email" name="subscribe-email" placeholder="Enter your email address">
+						<input type="submit" class="button secondary theme-button-secondary" value="Subscribe">
+					</form>
+				</li>
+
+				<li>
+					<h4>Let's Keep in Touch</h4>
+					<p>Address goes here.</p>
+					<p>Phone: 1-800-0000</p>
+					<p><a href="mailto:contact@company.com">contact@company.com</a></p>
+				</li>
+			</ul>
+		</section>
 	</div>
 
 
