Add markup for footer

--- a/index.html
+++ b/index.html
@@ -220,5 +220,13 @@
 
 
 
+	<!-- FOOTER -->
+	<footer id="main-footer" class="l-align-center">
+		<p>&copy; Copyright 2013 YourCompany. All rights reserved.</p>
+	</footer>
+
+
+
+
 </body>
 </html>
