Align social media top icons with logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<p>1-800-0000</p>
 			</div>
 
-			<ul class="l-inline-list l-align-right l-clearfix">
+			<ul class="l-inline-list l-align-right l-clearfix" id="social-top">
 				<li class="social-media facebook"><a href=""></a></li>
 				<li class="social-media twitter"><a href=""></a></li>
 				<li class="social-media delicious"><a href=""></a></li>
